--- a/pom.xml
+++ b/pom.xml
@@ -180,14 +180,13 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.17</version>
                 <configuration>
-                    <!-- Fork every test because it will launch a separate AS instance -->
-                    <forkMode>always</forkMode>
-                    <systemPropertyVariables>
-                        <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
-                    </systemPropertyVariables>
-                    <redirectTestOutputToFile>false</redirectTestOutputToFile>
+                    <includes>
+                        <include>**/*.java</include>
+                    </includes>
                 </configuration>
+
             </plugin>
             <!-- WildFly plugin to deploy ear -->
             <plugin>
