--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <version.wildfly.maven.plugin>1.0.1.Final</version.wildfly.maven.plugin>
         <version.wildfly>8.0.0.Final</version.wildfly>
         <version.jboss.spec.javaee>1.0.0.Final</version.jboss.spec.javaee>
+        <richfaces.bom.version>4.3.5.Final</richfaces.bom.version>
 
         <!-- other plugin versions -->
         <version.compiler.plugin>3.1</version.compiler.plugin>
@@ -48,13 +49,19 @@
                 <scope>import</scope>
             </dependency>
             <dependency>
-              <groupId>com.pi4j</groupId>
-              <artifactId>pi4j-parent</artifactId>
-              <version>${version.pi4j}</version>
-              <type>pom</type>
+                <groupId>com.pi4j</groupId>
+                <artifactId>pi4j-parent</artifactId>
+                <version>${version.pi4j}</version>
+                <type>pom</type>
                 <scope>import</scope>
             </dependency>
-
+            <dependency>
+                <groupId>org.richfaces</groupId>
+                <artifactId>richfaces-bom</artifactId>
+                <version>${richfaces.bom.version}</version>
+                <scope>import</scope>
+                <type>pom</type>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -136,9 +143,9 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-        	<groupId>org.jboss.resteasy</groupId>
-        	<artifactId>jaxrs-api</artifactId>
-        	<version>${resteasy.version}</version>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>jaxrs-api</artifactId>
+            <version>${resteasy.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -160,14 +167,22 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-          <groupId>com.pi4j</groupId>
+            <groupId>com.pi4j</groupId>
             <artifactId>pi4j-core</artifactId>
             <version>${version.pi4j}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.richfaces.ui</groupId>
+            <artifactId>richfaces-components-ui</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.richfaces.core</groupId>
+            <artifactId>richfaces-core-impl</artifactId>
         </dependency>
     </dependencies>
 
     <build>
-        <finalName>iotweb.war</finalName>
+        <finalName>iotweb</finalName>
         <plugins>
             <plugin>
                 <artifactId>maven-war-plugin</artifactId>
@@ -178,9 +193,9 @@
                 </configuration>
             </plugin>
             <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-antrun-plugin</artifactId>
-              <version>1.7</version>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.7</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
