--- a/build.xml
+++ b/build.xml
@@ -23,6 +23,17 @@ Generated using mvn ant:ant
         <echo message="Please run: $ant -projecthelp"/>
     </target>
 
+    <target name="blink-service.jar"
+            description="A ruunable jar that contains the BlinkIpAddress for use as a standalone service">
+        <jar basedir="${maven.build.outputDir}" jarfile="target/blink-service.jar">
+            <include name="org/jboss/devnation/pilab/BlinkIpAddress*" />
+            <zipfileset includes="**/*.class" src="${maven.repo.local}/org/jboss/logging/jboss-logging/3.1.4.GA/jboss-logging-3.1.4.GA.jar"/>
+            <manifest>
+                <attribute name="Main-Class" value="org.jboss.devnation.pilab.BlinkIpAddress"/>
+            </manifest>
+        </jar>
+    </target>
+
     <target name="test-only">
         <junit printSummary="yes" haltonerror="false" haltonfailure="false" fork="true">
             <sysproperty key="basedir" value="."/>
