--- a/pom.xml
+++ b/pom.xml
@@ -152,7 +152,7 @@
             <groupId>org.jboss.logging</groupId>
             <artifactId>jboss-logging</artifactId>
             <version>3.1.4.GA</version>
-            <scope>provided</scope>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.jboss.weld</groupId>
@@ -216,9 +216,8 @@
                 <configuration>
                     <filename>iotweb.war</filename>
                     <skip>false</skip>
-                    <!-- For debugging
-                    <jvm-args>-agentlib:jdwp=transport=dt_socket,address=8999,server=y,suspend=n -Xms64m -Xmx512m -XX:MaxPermSize=256m -Djava.net.preferIPv4Stack=true</jvm-args>
-                    -->
+                    <!-- For debugging -->
+                    <jvm-args>-agentlib:jdwp=transport=dt_socket,address=8787,server=y,suspend=n -Xms64m -Xmx512m -XX:MaxPermSize=256m -Djava.net.preferIPv4Stack=true</jvm-args>
                 </configuration>
             </plugin>
         </plugins>
