--- a/build.xml
+++ b/build.xml
@@ -87,7 +87,30 @@ Generated using mvn ant:ant
     </target>
     <target name="PiGlow">
         <java classname="pilab.PiGlowTests">
-            <arg value="on"/>
+            <classpath>
+                <path refid="build.test.classpath"/>
+                <pathelement location="${maven.build.testOutputDir}"/>
+            </classpath>
+        </java>
+    </target>
+    <target name="ControlGpioExample">
+        <java classname="pilab.ControlGpioExample">
+            <classpath>
+                <path refid="build.test.classpath"/>
+                <pathelement location="${maven.build.testOutputDir}"/>
+            </classpath>
+        </java>
+    </target>
+    <target name="ListenGpioExample">
+        <java classname="pilab.ListenGpioExample">
+            <classpath>
+                <path refid="build.test.classpath"/>
+                <pathelement location="${maven.build.testOutputDir}"/>
+            </classpath>
+        </java>
+    </target>
+    <target name="TriggerGpioExample">
+        <java classname="pilab.TriggerGpioExample">
             <classpath>
                 <path refid="build.test.classpath"/>
                 <pathelement location="${maven.build.testOutputDir}"/>
